--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+```jsx
 import React, { useState } from 'react';
 
 const App = () => {
@@ -391,3 +392,4 @@ const App = () => {
 };
 
 export default App;
+```
